Chaning to 1-based indices. Also fix minor errors.

--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -120,9 +120,12 @@
 \newcommand*{\latmodular}{\Lambda_{\ring,q}}
 
 \newcommand*{\kernelbasis}{\mathcal{B}}
+\newcommand*{\subrange}[1]{<#1}
+% \newcommand*{\concat}{\Vert}
 
 \newcommand*{\latencode}{\ensuremath{\mathsf{Encode}^{\textup{B}}_{\eta,q}}}
 \newcommand*{\latdecode}{\ensuremath{\mathsf{Decode}^{\textup{B}}_{\eta,q}}}
 \newcommand*{\openencode}{\ensuremath{\mathsf{Encode}_{\mathrm{op}}}}
 \newcommand*{\opendecode}{\ensuremath{\mathsf{Decode}_{\mathrm{op}}}}
 \DeclareMathOperator*{\Span}{Span}
+
