--- a/sections/prelim.tex
+++ b/sections/prelim.tex
@@ -10,7 +10,7 @@ Let $S$ be a set.
 We write $x\gets S$ for the process of sampling an element of $S$ uniformly at random.
 Let $n\in\NN$, we denote by $\interval{n}$ the set $\{1,\dots,n\}$.
 Let $T$ be a full binary tree of depth $d$.
-We denote the root node of $T$ by the empty string $\epsilon$, and for any node $v$, $v\concat 0$ and $v\concat 1$ denotes the left and right child of $v$ respectively.
+We denote the root node of $T$ by the empty string $\emptylist$, and for any node $v$, $v\concat 0$ and $v\concat 1$ denotes the left and right child of $v$ respectively.
 In particular, $\bin^d$ is the set of leaves of $T$.
 A labeled full binary tree with labels in $S$ is represented by a labeling function $\lbl : \bin^{\leq d} \to S$.
 
